syntax = "proto3";

option csharp_namespace = "grpc_tuts";

package todo;

service Todo {
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
    rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);
    rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
    rpc GetTodo(GetTodoRequest) returns (GetTodoResponse);
    rpc ListTodo(ListTodoRequest) returns (ListTodoResponse);
}

message CreateTodoRequest {
    string title = 1;
    bool is_completed = 2;
}

message CreateTodoResponse {
    string id = 1;
    string title = 2;
    bool is_completed = 3;
}

message UpdateTodoRequest {
    string id = 1;
    string title = 2;
    bool is_completed = 3;
}

message UpdateTodoResponse {
    string id = 1;
    string title = 2;
    bool is_completed = 3;
}

message DeleteTodoRequest {
    string id = 1;
}

message DeleteTodoResponse {
}

message GetTodoRequest {
    string id = 1;
}

message GetTodoResponse {
    string id = 1;
    string title = 2;
    bool is_completed = 3;
}

message TodoDto {
    string id = 1;
    string title = 2;
    bool is_completed = 3;
}

message ListTodoRequest {
    string id = 1;
}

message ListTodoResponse {
    repeated TodoDto todos = 1;
}